Made a new combined R&D and moved down the methods!

--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -34,8 +34,58 @@ Recent research has suggested that plants adjust their end of season timing dyna
 These contrasting results suggest fundamental gaps in our understanding of how early-season events (and thermal conditions of the vegetative period?) shape growing season length. How early-season events, such as leafout, affect end-of-season events is poorly understood. While results from satellites (e.g., using NDVI) show a correlation,  what exactly is being measured for `end of season' is not clearly tied to a plant-scale event. Yet any connections would likely start at the individual plant level, where we rarely if ever have good measures of start and end of season events together. Further, because end-of-season events, are often more locally adapted---with plants using unique photoperiods to cue important events such as budset (CITES)---than start-of-season events, these trends may importantly vary across populations. Such population-level studies, however, are based on a very limited number of species (CITE zeng and me I guess). Species generally vary strongly in their start-of-season phenology, with this being a major factor that can influence forecasts (NachoOSPREE) and land surface models (CITES). Results to date reporting correlation between start- and end-of-season events generally cannot differentiate between different species, populations or individuals, making our inference limited. 
 % Theory suggesting this is driven by different plant strategies in response to abiotic and biotic environmental pressures (CITES), and also predicts that they should vary strongly in end-of-season events ...
 
-In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. We address this using rarely available plant-scale data---phenological observations from a multi-species common garden study that can test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and its thermal conditions, which connect to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo
+%emwNov8 -- I don't love the focus on variation ... we do get into species level variation but am not sure we want to ask this as the major question so I rewrote it, but left old text for now. 
+Here, we examine how start-of-season events, using leafout, may affect end-of-season, using budset, to determine the length of the growing season
+% In this study, we test how variation in start-of-season---leafout--and end-of-season---budset---phenology among species, populations, and individuals affect the length of the growing season. 
+We address this using rarely available plant-scale data---phenological observations over three years from a multi-species common garden study that can test how correlated leafout and budset are in different species across populations and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and its thermal conditions, which connect to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. %emw2024Sep19 -- woo, woo
 
+\section{Results \& Discussion} 
+%emwNov8: can we switch to Rnw? Could finalize text a bit more but must-do before submitting to make sure all the numbers are correct. 
+%emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
+%dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
+
+We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal growing season , defined here as....\citep{} ... (Figure \ref{fig:thermcal}c). 
+
+These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity (CITEzani). Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig XXa). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth (grephoneCITES). 
+%The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
+% The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. 
+
+This relationship was strongly species-dependent. with later leafout leading to longer thermal seasons most apparent in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationshio )(\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
+%cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. 
+
+We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
+
+\emph{Variation in leafout and budset}\\
+
+Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation (CITES), we found high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
+
+Spring phenological phases are reported to be more plastic than autumn ones (CITES), but we found that, relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population). Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Following trends leafout and our finding that earlier leafout correlates with earlier budset, 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
+
+%emwNov8: Can we put this 3 day number (below paragraph) in context compared to year to year variation? Also, why the grant? Also, we need to test FFD. 
+These results are somewhat surprising as budset is commonly thought to be strongly dependent on population, with different populations requiring different critical photoperiods to trigger budset and leading to relatively stable budset dates across years (Soolanayakanahally2013, and find some review paper). Supporting this---and in contrast to leafout---we found that populations did vary in their budset. Populations from the Second College Grant set buds approximately three days before those from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b) and small. Our results suggest we need much more work on additional species, as results to date have focused mainly on one species (\emph{Populus balsamifera}) and more efforts to understand how environmental factors beyond photoperiod may affect budset. Even for \emph{Populus balsamifera}, the species suggested to be mainly photoperiod-controlled, recent work suggests temperature may also play a major role (Michelson2018).   
+
+% OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
+
+%emwNov8: I did not update this paragraph much. 
+High variation across species in both their leafout and budset timing lead to species to drive most variation in  growing season length  ($\sigma_{species}$: 14.38, $UI_{95}$[9.85,20.81], with less variation among years ($\sigma_{year}$: 4.67 $UI_{95}$[0.76,8.63], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$: 2.50, $UI_{95}$[0.19,2.82], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
+
+
+\emph{Ecological and forecasting implications}\\
+%emwNov8: I have not read the full R&D together... I suspect once you do, you can cut some of the below which might now be repetitive. 
+Our multi-species common garden study showed that for already early leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. For early leafout species, delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable.  For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, even an earlier relative leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately large gain in thermal sums.
+
+Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{}, implying there may be little to gain from a carbon perspective.
+%cjc2024Sept25: I love this above paragraph!! It's a thoughtful hypothesis that could explain so much. 
+
+%emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
+%emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
+%dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
+So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability which in forest systems is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{}.
+
+%emwNov8: Need to add that we have A LOT more information now from this study to guide future research ... (1) we need to be careful on what species we look at (so NDVI as Zohner uses, will schmeer across this and make understanding it mechanistically harder), (2) we need to figure out what mechanistically controls this [GOOD spot to introduce whether it might be leaf longeivity and also talk about budset vs. other late season events ... though it would be good if we can discuss budset and what it means vs. leaf coloring etc. earlier too]
+ This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). Some forward thinking implications paragraph here.
+ 
+ 
 \section{Methods} %emwNov4 -- Skipping!
 \subsubsection{The common garden at Weld Hill}
 In 2014-2015, we collected seeds of 18 species woody plants from four field sites in eastern Northern America spanning a Y degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White mountains (44.11$^{\circ}$N, 52.14$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 50.66$^{\circ}$W), and St. Hippolyte, CN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seed back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (lat long) where we germinated seeds following standard germination protocols, and grew them to seedling stages for a year or so in the research green house. In Spring of 2017 we planted them out to establish the common garden at Weld hill. Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out planted in the early spring of 2018 (i think - yeah that's right!). Plots were divided between tree plots which included species x,y,z and shrub plots which included species a,b,c,d and shade cloth (Table \ref{listSp}). Plots were regularly weeded and watered throughout the duration of the study.
@@ -55,57 +105,6 @@ We define the thermal growing season as the cumulative growing degree day heat s
 
 All models were fit in the R package brms on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. All analysis were done in R.
 
-%emwNov4 -- START BELOW! Need to merge results and discussion .... 
-
-\section{Results} %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
-%dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
-\subsubsection{Sources of variation in calendar growing season}
-There was high variance in leafout timing among species and years ($\sigma_{species}$: 8.23 $UI_{95}$[5.22,12.81], $\sigma_{year}$:10.49 $UI_{95}$[4.27,24.60], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:0.62, $UI_{95}$[0.02,2.82], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). 
-
-Relative to leafout, variance in budset timing was higher for species, years and populations ($\sigma_{species}$: 9.81 $UI_{95}$[ 6.61,14.49], $\sigma_{year}$: 14.92 $UI_{95}$[5.68,9.21], $\sigma_{population}$: 2.35, $UI_{95}$[0.23,8.51], Figure \ref{fig:vapar}), but followed similar relative contributions (highest variance in year, lowest in population).
-Budset was earliest for \emph{Amelanchier canadensis} and latest for \emph{Alnus incana} and \emph{Betula paperifera} with more than three weeks between them (Figure \ref{fig:vapar}a). Populations from the Second College Grant set buds approximately three days before those from the white mountains, but these differences statistically weak (Figure \ref{fig:vapar}b). Like leafout 2019 had the earliest budset and 2020 the latest (Figure \ref{fig:vapar}b).
-
-Variance in growing season length was highest among species ($\sigma_{species}$: 14.38, $UI_{95}$[9.85,20.81] and lower among years ($\sigma_{year}$: 4.67 $UI_{95}$[0.76,8.63], Figure \ref{fig:vapar}b) and populations ($\sigma_{population}$: 2.50, $UI_{95}$[0.19,2.82], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). Despite substantial difference among years for leafout and budset, the calender growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c).
-
-The lower levels of variance among year in growing season length we observed relative to the high variance in both leafout and budset indicate that variation in the SoS and EoS among years is positively associated (ie early leafout= earlier budset), which is supported by weak but positive pearsons correlation coefficient of 0.32 $CI_{95}$[0.25, 0.39] we found between leafout and budset in our study.
-
-\subsubsection{Relationship between leafout phenology and calender and thermal growing seasons}
-
-We found that later leafout resulted in a shorter calendar growing season (Figure \ref{fig:thermcal}a) and that this relationship was consistent across species, though varying strength  (Figure \ref{fig:thermcal}b).
-%dl2024Sept20 I could see some readers struggling here: there is a stronger effect in earlier spp for individuals that leafout later---stronger meaning what exactly? That the latest individuals of early species have the longest thermal growing seasons? I think it is explained well in the figure caption, but maybe needs more elaboration in the text.
-In contrast, we found that a generally later leafout resulted in a longer thermal growing season (Figure \ref{fig:thermcal}c) in our study. This effect was stronger for species that typically leaf out earlier in the spring relative to others like \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and \emph{Betula populifolia} and was weaker in later species like \emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}(Figure \ref{fig:thermcal}d).
-%cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. 
-
-
-\section{Discussion}
-%emwNov4 -- moved this down from previous spot in intro, but have not adjusted text yet!
-But conditions that are suitable for photosynthesis are not uniform across the year (Figure 1a). While earlier leafout may increase the length of the calendar growing season, such shifts may have little effect on the thermal growing season, defined here as....\citep{} because the early spring isn't favorable. The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
-%emw2024Sep19 -- also, I am not sure about the term 'phenological carryover' effect (what is a carry-over versus a correlation?) -- you might have to sell it to me over a zoom call or such....
-%dl2024Sept20 I also made this note, I was not sure what "carryover referred to
-%dl2024Sept20: I don't think you need to say "four individual plants" it made me initially think we only had data from four plants for those species.
-We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
-%emwNov4 -- end of: moved this down from previous spot in intro, but have not adjusted text yet!
-
-
-%emw2024Sep19 -- I find these results so cool that I think you should open broader and bigger and then get into the species differences .. so open with something like 'We found a fundamental and unexpected trade-off between early, longer growing seasons and the thermal growing season." Or something like that ... then talk about how unexpected this is and what it means, then get into the species-level differences in the next paragraph. 
-Our multi-species common garden study showed that for already early leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season. In fact, we found that for these early leafing taxa, delayed leafout resulted in a longer thermal growing season. This relationship was in part explained by phenological carry-over between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable.  For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, even an earlier relative leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately large gain in thermal sums.
-
-The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. Our results show that there is little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{}, implying there may be little to gain from a carbon perspective.
-%cjc2024Sept25: I love this above paragraph!! It's a thoughtful hypothesis that could explain so much. 
-
-%emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
-%emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
-%dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
-So then why are species early? How is it then that phenologically trackers are doing better? \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability which in forest systems is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{}.
-
-%emw2024Sep19 -- yes, it's definitely still true that spring phenology in trees shifts much more than autumn ... you can probably check is the recent ipcc AR5 says it or the Menzel paper from a couple years ago. 
-The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely   
-%dl2024Sept20 I felt this was not setup in the intro---did we expect to find population diff and if so why? 
-The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
-
- This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). Some forward thinking implications paragraph here.
-
-%dl2024Sept20 One thought I had that I think would fit in the discussion: how does this relate to the distribution of a phenological event? What are the implications of species for which most individual are uniformly shifting vs a distribution of individuals with a left skew?
 
 \section{Figures} %emw2024Sep19 -- I really like the figures! But I think if you put the first one last you can introduce as a fundamentally new and important view of early seasons as calendar days versus thermal days that wraps up the whole paper. I might then make the last figure first -- big take-home shocking message given first in figures and text! Then break down the variance and data in the other figure. 
 %emwNov4 -- I moved first figure to third. 
